--- a/index.css
+++ b/index.css
@@ -479,7 +479,7 @@ main{
     margin-top: 2rem;
     text-align: center;
     margin-left: 0rem;
-    background-color: #8e44ad;
+    background-color: cyan;
     padding: 3rem;
 }
 .content h1{
