--- a/index.css
+++ b/index.css
@@ -387,6 +387,11 @@ footer{
 
 
 @media (max-width:990px){
+    *{
+        margin:0;
+        padding:0;
+        box-sizing:border-box;
+    }
 
     .main-container{
         height: auto;
