--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@ html{
     background-image: url(image/school2.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
+    overflow:hidden;
     
     
    
@@ -395,6 +396,7 @@ footer{
 
     .main-container{
         height: auto;
+        overflow:hidden;
         
     }
 header{
