--- a/index.css
+++ b/index.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
 
 }
+body{
+    overflow:hidden;
+}
 html{
     font-size: 62.5%;
 }
@@ -392,6 +395,9 @@ footer{
         margin:0;
         padding:0;
         box-sizing:border-box;
+    }
+    body{
+        overflow:hidden;
     }
 
     .main-container{
