--- a/index.css
+++ b/index.css
@@ -11,9 +11,7 @@ html{
 .main-container{
     width: 100vw;
     height:100vh;
-    background-image: url(image/school2.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
+     background-color:linear-gradient(red,blue,green);
     overflow:hidden;
     
     
