--- a/index.css
+++ b/index.css
@@ -391,6 +391,8 @@ footer{
     .main-container{
         height: auto;
         overflow:hidden;
+         background-image: conic-gradient(#a29bfe,#9b59b6,#ea8685);
+
         
     }
 header{
