--- a/index.css
+++ b/index.css
@@ -391,7 +391,7 @@ footer{
     .main-container{
         height: auto;
         overflow:hidden;
-         background-image: conic-gradient(#a29bfe,#9b59b6,#ea8685);
+         background-image: conic-gradient(#1e90ff,#2ed573,#a55eea);
 
         
     }
