--- a/index.css
+++ b/index.css
@@ -12,6 +12,9 @@ html{
     width: 100vw;
     height:100vh;
     background-image: url('image/school2.jpeg');
+    background-size:cover;
+    background-position:100% 100%;
+    background-repeat:no-repeat;
     overflow:hidden;
     
     
