--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ html{
     height:100vh;
     background-image: url('image/school2.jpeg');
     background-size:cover;
-    background-position:100% 100%;
+    background-position:center;
     background-repeat:no-repeat;
     overflow:hidden;
     
