--- a/aboutus.css
+++ b/aboutus.css
@@ -178,7 +178,7 @@
     height: auto;
     background: none;
     position: relative;
-    overflow:hidden;
+    overflow-x:hidden;
 
    }
    .head{
